sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: not found: value apesBleu
  while (apesBleu <= avantBlanc) {
         ^